tests/fixtures/grammar/negative/bad-type-paren.asfl
module SYSTEM_Bad;
type T = (nat |;
end_module
